--- a/src/components/MyBookingsPage.css
+++ b/src/components/MyBookingsPage.css
@@ -18,6 +18,7 @@
   align-items: center;
   gap: 70px;
   background-color: #f9f9f9;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 20px;
   width: 1150px;
 }
