--- a/src/components/ManagerPage.css
+++ b/src/components/ManagerPage.css
@@ -6,60 +6,7 @@
   
 }
 
-.add-room-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  gap: 20px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.delete-room-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  gap: 20px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.form-container {
-  display: flex;
-  gap: 20px;
-}
-
-.input-style {
-  
-  padding: 5px 12px;
-  font-size: 14px;
-  line-height: 20px;
-  color: #24292e;
-  vertical-align: middle;
-  background-color: #ffffff;
-  background-repeat: no-repeat;
-  background-position: right 8px center;
-  border: 1px solid #e1e4e8;
-  border-radius: 6px;
-  outline: none;
-  box-shadow: rgba(225, 228, 232, 0.2) 0px 1px 0px 0px inset;
-  :focus{
-      border-color: #0366d6;
-      outline: none;
-      box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
-  }
-  
-}
-
-.category-select {
-  border: 1px solid #e1e4e8;
-  color: #24292e;
-  border-radius: 6px;
-}
-
-.add-room-button {
+.check-in-button {
   display: inline-block;
   outline: 0;
   cursor: pointer;
@@ -77,7 +24,7 @@
   transition-property: color, background-color, border-color;
 }
 
-.add-room-button:hover {
+.check-in-button:hover {
   color: #ffffff;
   background-color: #969696;
   border-color: #1b1f2326;
@@ -85,7 +32,7 @@
   transition-duration: 0.1s;
 }
 
-.delete-room-button {
+.checkout-button {
   display: inline-block;
   outline: 0;
   cursor: pointer;
@@ -103,20 +50,24 @@
   transition-property: color, background-color, border-color;
 }
 
-.delete-room-button:hover {
+.checkout-button:hover {
   color: #ffffff;
-  background-color: #e64343;
+  background-color: #969696;
   border-color: #1b1f2326;
   box-shadow: rgba(27, 31, 35, 0.1) 0px 1px 0px 0px, rgba(255, 255, 255, 0.03) 0px 1px 0px 0px inset;
   transition-duration: 0.1s;
 }
 
+.room-list-header {
+  font-family: "Nanum Myeongjo", serif;
+}
 
 .room-container {
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: start;
+  margin-top: 50px;
 }
 
 table {
@@ -139,4 +90,11 @@ th {
   text-align: left;
 }
 
+.columns th:last-child {
+  text-align: center; /* Ensures the Action column's content is centered */
+}
+
+.room-item td:last-child {
+  text-align: center; /* Ensures the Action column's content is centered */
+}
 
